--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,23 @@
 
 certifi==2021.10.8
 click==7.1.2
-cycler==0.10.0
-cytoolz==0.11.0
-daal4py==2021.3.0
-dask==2021.10.0
-distlib==0.3.4
-Eel==0.14.0
-entrypoints==0.3
-et-xmlfile==1.1.0
-folium==0.12.1.post1
-fonttools==4.25.0
-fpdf==1.7.2
-gitdb==4.0.9
-GitPython==3.1.26
 gunicorn==20.1.0
+jinja2==2.11.3
 inflection==0.5.1
 itsdangerous==1.1.0
 kaleido==0.2.1
 locket==0.2.1
 macholib==1.16
 MarkupSafe==2.0.1
-mccabe==0.6.1
-mpmath==1.2.1
-munkres==1.1.4
-mypy-extensions==0.4.3
-pandas==1.3.4
 pathspec==0.7.0
 patsy==0.5.2
 pep8==1.7.1
 Pillow==8.4.0
 pkginfo==1.7.1
 platformdirs==2.4.1
-plotly==5.5.0
-prettytable==3.1.1
-pycosat==0.6.3
-pycountry==22.1.10
-pycurl==7.44.1
-pyecharts==1.9.1
-pyinstaller==5.3
-pyinstaller-hooks-contrib==2022.8
-pyls-spyder==0.4.0
-pytest==6.2.5
-python-lsp-jsonrpc==1.0.0
-python-lsp-server==1.2.4
-pytz==2021.3
-PyYAML==6.0
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.6
-scikit-image==0.18.3
-simplegeneric==0.8.1
-simplejson==3.17.6
-smmap==5.0.0
-Sphinx==4.2.0
-tenacity==8.0.1
-terminado==0.9.4
 unicodecsv==0.14.1
 urllib3==1.26.7
 webencodings==0.5.1
 Werkzeug==1.0.1
 wincertstore==0.2
-xlwt==1.3.0
-zict==2.0.0
-zope.event==4.5.0
+
